[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "newsapi>=0.1.1",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "ta>=0.11.0",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.55",
]
